flickering issue - SW-9268

--- a/src/sass/tmt-newco-theme.scss
+++ b/src/sass/tmt-newco-theme.scss
@@ -59,6 +59,11 @@ $newcobtndefault-hover-background: #f6f0fb;
 $newco-white-background: #ffffff;
 
 .tmt-newco {
+  .collapsing {
+    -webkit-transition: height 0.05s ease;
+    -o-transition: height 0.05s ease;
+    transition: height 0.05s ease;
+  }
   .product-brands-list {
     background-color: $newco-white-background;
   }
